--- a/movies.html
+++ b/movies.html
@@ -158,21 +158,24 @@ nav button:hover{background:#333}
 <!-- PIN AUTH FIX -->
 <script>
 (function(){
-  const pin = localStorage.getItem("busanso_pin");
-  const expiry = localStorage.getItem("busanso_pin_expiry");
+  const pin = localStorage.getItem("activePIN");
+  const pkg = localStorage.getItem("activePackage");
 
-  if(!pin || !expiry){
-    location.replace("login.html"); // your PIN page
+  if(!pin || !pkg){
+    location.replace("login.html");
     return;
   }
 
-  const now = new Date();
-  const expDate = new Date(expiry);
+  try{
+    const data = JSON.parse(pkg);
 
-  if(now >= expDate){
-    alert("Your access PIN has expired.");
-    localStorage.removeItem("busanso_pin");
-    localStorage.removeItem("busanso_pin_expiry");
+    if(Date.now() > data.expiry){
+      alert("Your subscription has expired.");
+      localStorage.removeItem("activePIN");
+      localStorage.removeItem("activePackage");
+      location.replace("login.html");
+    }
+  }catch(e){
     location.replace("login.html");
   }
 })();
