--- a/movie.html
+++ b/movie.html
@@ -2,121 +2,201 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Movie Details</title>
+<title>BUSANSO – Watch</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://kit.fontawesome.com/017eaf7e3f.js" crossorigin="anonymous"></script>
+
 <style>
-body{background:#0b0b0b;color:#fff;font-family:Poppins,system-ui,sans-serif;}
-.header{height:400px; background-size:cover; background-position:center; position:relative; display:flex; align-items:flex-end; padding:20px;}
-.header-overlay{position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(to top, #0b0b0b 30%, rgba(0,0,0,0.4));}
-.header-content{position:relative; z-index:2;}
-.title{font-size:2rem; font-weight:900;}
-.meta{color:#ccc; font-size:.85rem;}
-.btn-main, .btn-sub{border:none; border-radius:25px; padding:10px 22px; font-weight:700;}
-.btn-main{background:#f5c46a; color:#000;}
-.btn-sub{background:#ff7a18; color:#000;}
-.player iframe{width:100%; height:220px; border-radius:10px;}
-.share-dropdown{display:none; position:absolute; background:#111; color:#fff; padding:10px; border-radius:5px;}
-.share-dropdown a{display:block; color:#fff; margin-bottom:5px; text-decoration:none;}
+body{
+  margin:0;
+  background:#000;
+  color:#fff;
+  font-family:Arial, sans-serif;
+}
+
+.player iframe{
+  width:100%;
+  height:56vw;
+  max-height:75vh;
+  border:none;
+  background:#000;
+}
+
+.details{
+  padding:16px;
+}
+
+.meta{
+  color:#aaa;
+  font-size:14px;
+  margin-bottom:10px;
+}
+
+.synopsis{
+  font-size:14px;
+  line-height:1.5;
+  margin-bottom:16px;
+}
+
+.actions button{
+  width:100%;
+  margin-top:8px;
+  padding:12px;
+  border:none;
+  border-radius:8px;
+  font-weight:bold;
+  cursor:pointer;
+  background:#222;
+  color:#fff;
+}
 </style>
 </head>
+
 <body>
 
-<div id="movie-header" class="header">
-  <div class="header-overlay"></div>
-  <div class="header-content">
-    <div class="title" id="movie-title"></div>
-    <div class="meta" id="movie-meta"></div>
-    <div class="mt-3">
-      <button class="btn-main mr-2" id="trailer-btn">▶ Watch Trailer</button>
-      <button class="btn-sub" id="watch-btn">▶ Watch Now</button>
-      <button class="btn btn-secondary" id="share-btn"><i class="fa fa-share"></i> Share</button>
-      <div class="share-dropdown" id="share-dropdown">
-        <a href="#" target="_blank" id="share-whatsapp">WhatsApp</a>
-        <a href="#" target="_blank" id="share-facebook">Facebook</a>
-        <a href="#" target="_blank" id="share-twitter">Twitter</a>
-        <a href="#" id="share-copy">Copy Link</a>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- ===== PIN CHECK (ONLY SECURITY) ===== -->
+<script>
+if(!localStorage.getItem("activePIN")){
+  location.replace("login.html");
+}
+</script>
 
-<div class="container mt-4">
-  <div id="movie-overview" class="mb-4"></div>
-  <div id="player" class="player mb-4" style="display:none">
-    <iframe id="trailer-frame" src="" frameborder="0" allowfullscreen></iframe>
+<div class="player" id="player"></div>
+
+<div class="details">
+  <h2 id="title"></h2>
+  <div class="meta" id="meta"></div>
+  <div class="synopsis" id="synopsis"></div>
+
+  <div class="actions">
+    <button onclick="shareWA()">WhatsApp</button>
+    <button onclick="shareMail()">Gmail</button>
+    <button onclick="shareTT()">TikTok</button>
+    <button onclick="copyShare()">Copy</button>
   </div>
 </div>
 
 <script>
-// ----- Sample movies JSON -----
-const movies = [
-  {
-    id: "1",
-    title: "When the Phone Rings",
-    year: 2024,
-    genre: "Mystery, Drama",
-    rating: 8.4,
-    overview: "A rising politician and his mute wife’s tense marriage begins to unravel after a mysterious phone call.",
-    poster: "https://image.tmdb.org/t/p/original/8UlWHLMpgZm9bx6QYh0NFoq67TZ.jpg",
-    trailer: "https://www.youtube.com/embed/dQw4w9WgXcQ",
-    fullMovie: "https://drive.google.com/file/d/ABC123/preview"
-  },
-  // Add more movies here
-];
+/* ===== READ PARAMS ===== */
+const q = new URLSearchParams(location.search);
 
-// ----- Get ID from URL -----
-const urlParams = new URLSearchParams(window.location.search);
-const movieId = urlParams.get('id');
-const movie = movies.find(m => m.id === movieId);
+const title     = q.get("title");
+const rawVideo  = q.get("video");
+const year      = q.get("year");
+const country   = q.get("country");
+const duration  = q.get("duration");
+const synopsis  = q.get("synopsis");
 
-if(!movie){
-  alert('Movie not found');
-} else {
-  // Populate header
-  document.getElementById('movie-title').textContent = movie.title;
-  document.getElementById('movie-meta').textContent = `${movie.year} • ${movie.genre} • ⭐ ${movie.rating} IMDb`;
-  document.getElementById('movie-header').style.backgroundImage = `url('${movie.poster}')`;
-  document.getElementById('movie-overview').textContent = movie.overview;
+if(!rawVideo || !title){
+  location.replace("movies.html");
+}
 
-  // Trailer button
-  document.getElementById('trailer-btn').addEventListener('click', () => {
-    document.getElementById('player').style.display = 'block';
-    document.getElementById('trailer-frame').src = movie.trailer;
-    document.getElementById('player').scrollIntoView({behavior: 'smooth'});
-  });
+/* ===== VIDEO NORMALIZER ===== */
+function getEmbed(url){
+  // YouTube
+  if(url.includes("youtube.com/watch")){
+    return "https://www.youtube.com/embed/" +
+      new URL(url).searchParams.get("v");
+  }
+  if(url.includes("youtu.be/")){
+    return "https://www.youtube.com/embed/" +
+      url.split("youtu.be/")[1];
+  }
 
-  // Watch Now button (check PIN)
-  document.getElementById('watch-btn').addEventListener('click', () => {
-    const pin = localStorage.getItem('userPIN');
-    if(pin){
-      // Show full movie
-      document.getElementById('player').style.display = 'block';
-      document.getElementById('trailer-frame').src = movie.fullMovie;
-      document.getElementById('player').scrollIntoView({behavior: 'smooth'});
-    } else {
-      // Redirect to subscription
-      window.location.href = 'packages.html';
+  // Vimeo
+  if(url.includes("vimeo.com")){
+    const id = url.split("/").pop();
+    return "https://player.vimeo.com/video/" + id;
+  }
+
+  // Google Drive
+  if(url.includes("drive.google.com")){
+    if(url.includes("/preview")) return url;
+    const id = url.match(/\/d\/([^/]+)/);
+    if(id) return `https://drive.google.com/file/d/${id[1]}/preview`;
+  }
+
+  return url;
+}
+
+const video = getEmbed(rawVideo);
+
+/* ===== PLAYER ===== */
+document.getElementById("player").innerHTML =
+  `<iframe id="videoFrame" src="${video}" allowfullscreen></iframe>`;
+
+/* ===== DETAILS ===== */
+document.getElementById("title").textContent = title;
+document.getElementById("meta").textContent =
+  `${country} • ${year} • ${duration}`;
+document.getElementById("synopsis").textContent = synopsis;
+
+/* ===== SHARE (NO VIDEO URL) ===== */
+const HOME_URL = location.origin + "/movies.html";
+
+const shareText =
+`${title}
+
+Country: ${country}
+Year: ${year}
+Duration: ${duration}
+
+${synopsis}
+
+Watch on BUSANSO:
+${HOME_URL}`;
+
+function shareWA(){
+  location.href =
+    `https://wa.me/?text=${encodeURIComponent(shareText)}`;
+}
+
+function shareMail(){
+  location.href =
+    `mailto:?subject=${encodeURIComponent(title)}&body=${encodeURIComponent(shareText)}`;
+}
+
+function shareTT(){
+  location.href =
+    `https://www.tiktok.com/share?text=${encodeURIComponent(shareText)}`;
+}
+
+function copyShare(){
+  navigator.clipboard.writeText(shareText);
+  alert("Copied");
+}
+
+/* ===== MOBILE FULLSCREEN + LANDSCAPE ===== */
+function isMobile(){
+  return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+}
+
+function enterFullscreenLandscape(){
+  const iframe = document.getElementById("videoFrame");
+  if(!iframe) return;
+
+  if(iframe.requestFullscreen){
+    iframe.requestFullscreen();
+  }else if(iframe.webkitRequestFullscreen){
+    iframe.webkitRequestFullscreen();
+  }
+
+  if(screen.orientation && screen.orientation.lock){
+    screen.orientation.lock("landscape").catch(()=>{});
+  }
+}
+
+document.addEventListener("fullscreenchange",()=>{
+  if(!document.fullscreenElement){
+    if(screen.orientation && screen.orientation.unlock){
+      screen.orientation.unlock();
     }
-  });
+  }
+});
 
-  // Share dropdown
-  const shareBtn = document.getElementById('share-btn');
-  const shareDropdown = document.getElementById('share-dropdown');
-  shareBtn.addEventListener('click', () => {
-    shareDropdown.style.display = shareDropdown.style.display === 'none' ? 'block' : 'none';
-  });
-
-  const pageURL = window.location.href;
-  document.getElementById('share-whatsapp').href = `https://wa.me/?text=${encodeURIComponent(pageURL)}`;
-  document.getElementById('share-facebook').href = `https://www.facebook.com/sharer.php?u=${encodeURIComponent(pageURL)}`;
-  document.getElementById('share-twitter').href = `https://twitter.com/share?url=${encodeURIComponent(pageURL)}`;
-  document.getElementById('share-copy').addEventListener('click', () => {
-    navigator.clipboard.writeText(pageURL);
-    alert('Link copied!');
-  });
+if(isMobile()){
+  setTimeout(enterFullscreenLandscape, 800);
 }
 </script>
+
 </body>
 </html>
