--- a/serie.html
+++ b/serie.html
@@ -87,10 +87,11 @@ body{margin:0;background:#000;color:#fff;font-family:Arial}
 <!-- 🔐 PIN + EXPIRY CHECK -->
 <script>
 const pin = localStorage.getItem("activePIN");
-const exp = localStorage.getItem("pinExpiry");
+const exp = Number(localStorage.getItem("pinExpiry"));
 
-if(!pin || !exp || Date.now() > Number(exp)){
-  localStorage.clear();
+if (!pin || !exp || isNaN(exp) || Date.now() > exp) {
+  localStorage.removeItem("activePIN");
+  localStorage.removeItem("pinExpiry");
   location.replace("login.html");
 }
 </script>
