--- a/admin-pins.html
+++ b/admin-pins.html
@@ -111,7 +111,7 @@ if(savedKey !== ADMIN_KEY){
 <script>
 /* 🔥 FIREBASE CONFIG */
 firebase.initializeApp({
-  apiKey: "YOUR_API_KEY",
+  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
   authDomain: "busanso-pins.firebaseapp.com",
   databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
   projectId: "busanso-pins"
